docs/0.20.1/_sources/api/gammapy.irf.EDispKernel.rst.txt
EDispKernel
===========

.. currentmodule:: gammapy.irf

.. autoclass:: EDispKernel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EDispKernel.axes
      ~EDispKernel.data
      ~EDispKernel.default_interp_kwargs
      ~EDispKernel.fov_alignment
      ~EDispKernel.has_offset_axis
      ~EDispKernel.is_pointlike
      ~EDispKernel.pdf_matrix
      ~EDispKernel.quantity
      ~EDispKernel.required_axes
      ~EDispKernel.tag
      ~EDispKernel.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~EDispKernel.cumsum
      ~EDispKernel.evaluate
      ~EDispKernel.from_diagonal_response
      ~EDispKernel.from_gauss
      ~EDispKernel.from_hdulist
      ~EDispKernel.from_table
      ~EDispKernel.get_bias
      ~EDispKernel.get_bias_energy
      ~EDispKernel.get_mean
      ~EDispKernel.get_resolution
      ~EDispKernel.integral
      ~EDispKernel.integrate_log_log
      ~EDispKernel.interp_missing_data
      ~EDispKernel.is_allclose
      ~EDispKernel.normalize
      ~EDispKernel.pad
      ~EDispKernel.pdf_in_safe_range
      ~EDispKernel.peek
      ~EDispKernel.plot_bias
      ~EDispKernel.plot_matrix
      ~EDispKernel.read
      ~EDispKernel.to_hdulist
      ~EDispKernel.to_image
      ~EDispKernel.to_table
      ~EDispKernel.to_table_hdu
      ~EDispKernel.to_unit
      ~EDispKernel.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: axes
   .. autoattribute:: data
   .. autoattribute:: default_interp_kwargs
   .. autoattribute:: fov_alignment
   .. autoattribute:: has_offset_axis
   .. autoattribute:: is_pointlike
   .. autoattribute:: pdf_matrix
   .. autoattribute:: quantity
   .. autoattribute:: required_axes
   .. autoattribute:: tag
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: cumsum
   .. automethod:: evaluate
   .. automethod:: from_diagonal_response
   .. automethod:: from_gauss
   .. automethod:: from_hdulist
   .. automethod:: from_table
   .. automethod:: get_bias
   .. automethod:: get_bias_energy
   .. automethod:: get_mean
   .. automethod:: get_resolution
   .. automethod:: integral
   .. automethod:: integrate_log_log
   .. automethod:: interp_missing_data
   .. automethod:: is_allclose
   .. automethod:: normalize
   .. automethod:: pad
   .. automethod:: pdf_in_safe_range
   .. automethod:: peek
   .. automethod:: plot_bias
   .. automethod:: plot_matrix
   .. automethod:: read
   .. automethod:: to_hdulist
   .. automethod:: to_image
   .. automethod:: to_table
   .. automethod:: to_table_hdu
   .. automethod:: to_unit
   .. automethod:: write
